# rippy

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/rippy/: __init__.py  config.py  defaults.py  main.py  makemkv.py  new.py  search.py  shared.py
src/rippy/commands/: config.py  errors.py  init.py  new.py  new.py.txt  task.py  task_get_disk_info.py  task_manager.py  task_search_movie.py
src/rippy/core/: config.py  config.py.bak  defaults.py  mkv_wizard.py  search.py
src/rippy/forms/: config_form.py  config_form.tcss
src/rippy/models/: config.py
tests/: conftests.py  test_commands_config.py  test_commands_init.py  test_config.py  test_core_config.py  test_init.py  test_makemkv.py
