[project]
name = "rippy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "makemkv>=0.3.1",
    "requests>=2.32.4",
    "textual>=5.0.1",
    "tomlkit>=0.13.3",
    "typer>=0.16.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "bumpver>=2024.1130",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[tool.uv]
package = true

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
#
# [tool.pytest.ini_options]
# minversion = "6.0"
# addopts = "-ra -q"
# testpaths = [
#     "tests",
# ]

[project.scripts]
rippy = "rippy:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''
extend-exclude = '''
/(
  # Add project-specific exclusions here
  tests/fixtures
  | scripts/old_code
)/
'''
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
]
extend_skip = [
    "tests/fixtures",
    "scripts/old_code",
]
